--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,10 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.6)
 project(entity_framework)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-set(SOURCE_FILES
-        test/main.cpp
-        test/BackgroundCollidableComponent.cpp
-        test/BackgroundCollidableComponent.h
-        test/RenderableComponent.h
-        test/RenderingSystem.h
-        test/BackgroundCollisionSystem.h
-        src/EntityEngine.cpp
-        src/EntityEngine.h
-        src/EntitySystem.h
-        src/Component.h
-        src/Entity.cpp
-        src/Entity.h
-        src/EntityOperation.h
-        src/ComponentOperationHandler.h
-        src/ComponentOperationHandler.cpp
-        src/ComponentFamily.cpp
-        src/ComponentFamily.h
-        src/BitSetUtility.h)
+file(GLOB SOURCE_FILES
+        test/*
+        src/*)
+
 add_executable(entityframework ${SOURCE_FILES})
